:sparkles: Adding components for about-me, banner, contact form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>Publicando via CI/CD</h1>
+<app-header></app-header>
+<app-banner></app-banner>
+<app-about-me></app-about-me>
+<app-form-lead></app-form-lead>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
