--- a/src/app/views/partials/header/header.component.html
+++ b/src/app/views/partials/header/header.component.html
@@ -4,8 +4,8 @@
       <div class="navigation">
         <div class="logo">
           <a href="#">
-            <img src="../../../../assets/images/logo.png" alt="Logo" class="img-responsive no_sticky_logo">
-            <img src="./../../../assets/images/logo-sticky.png" alt="Logo" class="img-responsive sticky_logo">
+            <img alt="Logo" class="img-responsive no_sticky_logo" src="../../../../assets/images/logo.png">
+            <img alt="Logo" class="img-responsive sticky_logo" src="./../../../assets/images/logo-sticky.png">
           </a>
         </div>
       </div>
