--- a/src/app/views/partials/banner/banner.component.html
+++ b/src/app/views/partials/banner/banner.component.html
@@ -4,11 +4,11 @@
     <div class="banner-caption wow fadeInUp" data-wow-delay="0.1">
       <h1>Está cansado de ter o nome <span>negativado?</span></h1>
       <p> Quer começar uma nova fase com o pé direito? Nós temos a solução perfeita para você!</p>
-      <a href="#mt_contact_section" class="mt_btn_color">Saiba Mais</a>
+      <a class="mt_btn_color" href="#mt_contact_section">Saiba Mais</a>
     </div>
   </div>
   <div class="white-svg">
-    <svg viewBox="0 0 2880 454.884" enable-background="new 0 0 2880 454.884" xml:space="preserve">
+    <svg enable-background="new 0 0 2880 454.884" viewBox="0 0 2880 454.884" xml:space="preserve">
             <polygon points="2880,454.884 0,454.884 0,0 1895.16,454.356 2880,311.572 "></polygon>
         </svg>
   </div>
