--- a/src/app/views/partials/footer/footer.component.html
+++ b/src/app/views/partials/footer/footer.component.html
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col-sm-8">
         <div class="copyright text-left">
-          <p>&copy; {{by.copy}} | Desenvolvido por: <a [href]="by.uri" target="_blank">{{ by.name }}</a> </p>
+          <p>&copy; {{ by.copy }} | Desenvolvido por: <a [href]="by.uri" target="_blank">{{ by.name }}</a></p>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="social_icons pull-right">
-          <a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-          <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-          <a href="#" title="Youtube" target="_blank"><i class="fa fa-youtube"></i></a>
+          <a href="#" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a>
+          <a href="#" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
+          <a href="#" target="_blank" title="Youtube"><i class="fa fa-youtube"></i></a>
         </div>
       </div>
     </div>
