--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -63,7 +63,7 @@ footer {
 body {
   margin: 0;
   padding: 0;
-  font-size: 24px;
+  font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
 }
@@ -193,65 +193,6 @@ p {
   line-height: 24px;
   margin-bottom: 20px;
   color: #767676;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-ul li {
-  font-size: 16px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  margin-bottom: 15px;
-  line-height: 30px;
-  color: #444444;
-  padding-left: 40px;
-  position: relative;
-}
-
-ul li:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  margin-top: 1px;
-  width: 6px;
-  height: 6px;
-  background: #2371ae;
-  background: linear-gradient(to right, #2371ae 0%, #bb47d4 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2371ae', endColorstr='#bb47d4', GradientType=1);
-  border-radius: 50%;
-  top: 12px;
-}
-
-ol {
-  margin: 0;
-  counter-reset: i;
-  position: relative;
-}
-
-ol li {
-  font-size: 16px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  margin-bottom: 15px;
-  line-height: 24px;
-  color: #444444;
-  padding-left: 40px;
-  position: relative;
-}
-
-ol li:before {
-  content: " ";
-  counter-increment: i;
-  content: counter(i) ".";
-  position: absolute;
-  left: 0;
-  color: #2371ae;
-  color: linear-gradient(to right, #2371ae 0%, #bb47d4 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2371ae', endColorstr='#bb47d4', GradientType=1);
-  margin-top: 1px;
 }
 
 a {
