--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.help-block-error
+  padding: 0
+  margin: -0.6em 0 1em 1.5em
+  font-size: .875em
+  color: #dc3545
