--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,23 @@
+html, body
+  height: 100%
+  margin: 0
+
 .help-block-error
   padding: 0
   margin: -0.6em 0 1em 1.5em
   font-size: .875em
   color: #dc3545
+
+app-dashbord
+  min-height: calc(100vh - 40px)
+  margin-bottom: 40px
+
+app-footer
+  position: fixed
+  left: 0
+  bottom: 0
+  width: 100%
+  background-color: #333
+  color: white
+  text-align: center
+  z-index: 1
